@@ -1,3 +1,6 @@
+2012-02-12  Kirit Saelensminde  <kirit@felspar.com>
+ Made some minor changes suggested by clang, including some dead code elimination.
+
 2012-01-30  Kirit Saelensminde  <kirit@felspar.com>
  MSVC 10 supports stdint.h so changed the configuration to use that.
 
@@ -6,6 +9,9 @@
 
 2012-01-25  Kirit Saelensminde  <kirit@felspar.com>
  Explicitly initialise some variables that were set before being returned in order to silence a compiler warning.
+
+2012-01-24  Kirit Saelensminde  <kirit@felspar.com>
+ The parser lock can now be acquired before the parse is called so that it can be used to cover the building of the parser.
 
 2012-01-15  Kirit Saelensminde  <kirit@felspar.com>
  Allow the logging functions to take up to four arguments.
